--- a/src/starterTemplate.html
+++ b/src/starterTemplate.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- build:css css/main.css -->
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/styles.css">
     <!-- endbuild -->
 
@@ -17,10 +20,15 @@
     <h1>Hello, world</h1>
 
     <!-- build:js js/main.js -->
+    <!-- JQuery JS -->
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <!-- Popper JS -->
     <script src="/node_modules/popper.js/dist/popper.min.js"></script>
+    <!-- Bootstrap JS -->
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- Font Awesome JS -->
     <script src="/node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
+    <!-- Custom JS -->
     <script src="/js/scripts.js"></script>
     <!-- endbuild -->
   </body>
