Fixed uglify for popperjs
Signed-off-by: VinayakTekade <vinayak.tekade@gmail.com>

--- a/Prototype/starterTemplate.html
+++ b/Prototype/starterTemplate.html
@@ -7,11 +7,11 @@
 
     <!-- build:css css/main.css -->
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <!-- endbuild -->
 
     <title>Hello, world!</title>
@@ -21,15 +21,15 @@
 
     <!-- build:js js/main.js -->
     <!-- JQuery JS -->
-    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <!-- Popper JS -->
-    <script src="/node_modules/popper.js/dist/popper.min.js"></script>
+    <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
     <!-- Bootstrap JS -->
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- Font Awesome JS -->
-    <script src="/node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
+    <script src="../node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
     <!-- Custom JS -->
-    <script src="/js/scripts.js"></script>
+    <script src="./js/scripts.js"></script>
     <!-- endbuild -->
   </body>
 </html>
