--- a/src/index.html
+++ b/src/index.html
@@ -1,48 +1,101 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- build:css css/main.css -->
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
-    <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="./css/styles.css">
-    <!-- endbuild -->
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Media Core</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ml-auto">
-          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">Features</a>
-          <a class="nav-item nav-link" href="#">Pricing</a>
-          <a class="nav-item nav-link disabled" href="#">Disabled</a>
-        </div>
-      </div>
-    </nav>
+	<!-- build:css css/main.css -->
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+	<!-- Font Awesome CSS -->
+	<link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+	<!-- Custom CSS -->
+	<link rel="stylesheet" href="./css/styles.css">
+	<!-- endbuild -->
 
-    <!-- build:js js/main.js -->
-    <!-- JQuery JS -->
-    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <!-- Popper JS -->
-    <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- Font Awesome JS -->
-    <script src="../node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
-    <!-- Custom JS -->
-    <script src="./js/scripts.js"></script>
-    <!-- endbuild -->
-  </body>
+	<title>Media Core</title>
+</head>
+
+<body>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#">Media-Core</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+			aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			<div class="navbar-nav ml-auto">
+				<a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+				<a class="nav-item nav-link" href="#">Messages</a>
+				<a class="nav-item nav-link" href="#">Profile</a>
+				<a class="nav-item nav-link" href="#">Settings</a>
+			</div>
+		</div>
+	</nav>
+
+	<div class="container">
+		<div class="card mt-5 mb-3 border-0">
+			<div class="row align-items-center">
+				<div class="col-3 col-md-1 m-2">
+					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+				</div>
+				<div class="col-6 col-md-4">
+					<div>Abhishek Roy</div>
+					<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<img src="./img/Grey_full.png" class="card-img" alt="...">
+				</div>
+				<div class="col-md-6">
+					<div class="card-body">
+						<div class="row">
+							<div class="col-12 col-md-4">
+								<div class="card-title">Like</div>
+								<div class="card-title">Comment</div>
+								<div class="card-title">Share</div>
+								<div class="card-title">Send</div>
+							</div>
+							<div class="col-12 col-md-8">
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- build:js js/main.js -->
+	<!-- JQuery JS -->
+	<script src="../node_modules/jquery/dist/jquery.min.js"></script>
+	<!-- Popper JS -->
+	<script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
+	<!-- Bootstrap JS -->
+	<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	<!-- Font Awesome JS -->
+	<script src="../node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
+	<!-- Custom JS -->
+	<script src="./js/scripts.js"></script>
+	<!-- endbuild -->
+</body>
+
 </html>
