Added Home Page UI
Signed-off-by: VinayakTekade <vinayak.tekade@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -20,23 +20,24 @@
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">Media-Core</a>
+		<a class="navbar-brand" href="#"><i class="fas fa-play"></i> Media-Core</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
 			aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav ml-auto">
-				<a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-				<a class="nav-item nav-link" href="#">Messages</a>
-				<a class="nav-item nav-link" href="#">Profile</a>
-				<a class="nav-item nav-link" href="#">Settings</a>
+				<a class="nav-item nav-link active" href="#"><i class="fas fa-home"></i> Home <span
+						class="sr-only">(current)</span></a>
+				<a class="nav-item nav-link" href="#"><i class="fas fa-comment"></i> Messages</a>
+				<a class="nav-item nav-link" href="#"><i class="fas fa-user"></i> Profile</a>
+				<a class="nav-item nav-link" href="#"><i class="fas fa-cog"></i> Settings</a>
 			</div>
 		</div>
 	</nav>
 
 	<div class="container">
-		<div class="card mt-5 mb-3 border-0">
+		<div class="card mt-5 mb-3 border-0 social-card">
 			<div class="row align-items-center">
 				<div class="col-3 col-md-1 m-2">
 					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
@@ -46,19 +47,20 @@
 					<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<img src="./img/Grey_full.png" class="card-img" alt="...">
+			<div class="row interact d-flex">
+				<div class="col-md-8 row">
+					<div class="col-12 col-md-9">
+						<img src="./img/Grey_full.png" class="card-img" alt="...">
+					</div>
+					<div class="col-12 col-md-3 actions">
+						<div class="card-title  mt-5 mb-4"><i class="fas fa-heart"></i> Like</div>
+						<div class="card-title my-4"><i class="fas fa-comment"></i> Comment</div>
+						<div class="card-title my-4"><i class="fas fa-share-alt"></i> Share</div>
+						<div class="card-title my-4"><i class="fas fa-share"></i> Send</div>
+					</div>
 				</div>
-				<div class="col-md-6">
-					<div class="card-body">
-						<div class="row">
-							<div class="col-12 col-md-4">
-								<div class="card-title">Like</div>
-								<div class="card-title">Comment</div>
-								<div class="card-title">Share</div>
-								<div class="card-title">Send</div>
-							</div>
+				<div class="col-md-4 comments">
+						<div class="row no-gutters">
 							<div class="col-12 col-md-8">
 								<div class="comment mb-2">
 									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
@@ -76,12 +78,258 @@
 										scuba diving we had planed it years ago
 									</p>
 								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
 							</div>
 						</div>
-					</div>
 				</div>
 			</div>
 		</div>
+		<div class="card mt-5 mb-3 border-0 social-card">
+			<div class="row align-items-center">
+				<div class="col-3 col-md-1 m-2">
+					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+				</div>
+				<div class="col-6 col-md-4">
+					<div>Abhishek Roy</div>
+					<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+				</div>
+			</div>
+			<div class="row interact d-flex">
+				<div class="col-md-8 row">
+					<div class="col-12 col-md-9">
+						<img src="./img/Grey_full.png" class="card-img" alt="...">
+					</div>
+					<div class="col-12 col-md-3 actions">
+						<div class="card-title  mt-5 mb-4"><i class="fas fa-heart"></i> Like</div>
+						<div class="card-title my-4"><i class="fas fa-comment"></i> Comment</div>
+						<div class="card-title my-4"><i class="fas fa-share-alt"></i> Share</div>
+						<div class="card-title my-4"><i class="fas fa-share"></i> Send</div>
+					</div>
+				</div>
+				<div class="col-md-4 comments">
+						<div class="row no-gutters">
+							<div class="col-12 col-md-8">
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+							</div>
+						</div>
+				</div>
+			</div>
+		</div>
+		<div class="card mt-5 mb-3 border-0 social-card">
+			<div class="row align-items-center">
+				<div class="col-3 col-md-1 m-2">
+					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+				</div>
+				<div class="col-6 col-md-4">
+					<div>Abhishek Roy</div>
+					<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+				</div>
+			</div>
+			<div class="row interact d-flex">
+				<div class="col-md-8 row">
+					<div class="col-12 col-md-9">
+						<img src="./img/Grey_full.png" class="card-img" alt="...">
+					</div>
+					<div class="col-12 col-md-3 actions">
+						<div class="card-title  mt-5 mb-4"><i class="fas fa-heart"></i> Like</div>
+						<div class="card-title my-4"><i class="fas fa-comment"></i> Comment</div>
+						<div class="card-title my-4"><i class="fas fa-share-alt"></i> Share</div>
+						<div class="card-title my-4"><i class="fas fa-share"></i> Send</div>
+					</div>
+				</div>
+				<div class="col-md-4 comments">
+						<div class="row no-gutters">
+							<div class="col-12 col-md-8">
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+							</div>
+						</div>
+				</div>
+			</div>
+		</div>
+		<div class="card mt-5 mb-3 border-0 social-card">
+			<div class="row align-items-center">
+				<div class="col-3 col-md-1 m-2">
+					<img src="./img/Grey_full.png" class="rounded-circle" width="70px" height="70px" alt="...">
+				</div>
+				<div class="col-6 col-md-4">
+					<div>Abhishek Roy</div>
+					<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+				</div>
+			</div>
+			<div class="row interact d-flex">
+				<div class="col-md-8 row">
+					<div class="col-12 col-md-9">
+						<img src="./img/Grey_full.png" class="card-img" alt="...">
+					</div>
+					<div class="col-12 col-md-3 actions">
+						<div class="card-title  mt-5 mb-4"><i class="fas fa-heart"></i> Like</div>
+						<div class="card-title my-4"><i class="fas fa-comment"></i> Comment</div>
+						<div class="card-title my-4"><i class="fas fa-share-alt"></i> Share</div>
+						<div class="card-title my-4"><i class="fas fa-share"></i> Send</div>
+					</div>
+				</div>
+				<div class="col-md-4 comments">
+						<div class="row no-gutters">
+							<div class="col-12 col-md-8">
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Black Panther </strong>Hey, Why didnt you call me for
+										scuba diving we had planed it years ago
+									</p>
+								</div>
+								<div class="comment mb-2">
+									<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
+								</div>
+							</div>
+						</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	</div>
 
 	<!-- build:js js/main.js -->
