Added Messages Page
Signed-off-by: VinayakTekade <vinayak.tekade@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 			<div class="navbar-nav ml-auto">
 				<a class="nav-item nav-link active" href="#"><i class="fas fa-home"></i> Home <span
 						class="sr-only">(current)</span></a>
-				<a class="nav-item nav-link" href="#"><i class="fas fa-comment"></i> Messages</a>
+				<a class="nav-item nav-link" href="./messages.html"><i class="fas fa-comment"></i> Messages</a>
 				<a class="nav-item nav-link" href="#"><i class="fas fa-user"></i> Profile</a>
 				<a class="nav-item nav-link" href="#"><i class="fas fa-cog"></i> Settings</a>
 			</div>
@@ -53,10 +53,10 @@
 						<img src="./img/Grey_full.png" class="card-img" alt="...">
 					</div>
 					<div class="col-12 col-md-3 actions">
-						<div class="card-title  mt-5 mb-4"><i class="fas fa-heart"></i> Like</div>
-						<div class="card-title my-4"><i class="fas fa-comment"></i> Comment</div>
-						<div class="card-title my-4"><i class="fas fa-share-alt"></i> Share</div>
-						<div class="card-title my-4"><i class="fas fa-share"></i> Send</div>
+						<div class="card-title my-3 mt-md-5 mb-md-4"><i class="fas fa-heart"></i> Like</div>
+						<div class="card-title my-3 my-md-4"><i class="fas fa-comment"></i> Comment</div>
+						<div class="card-title my-3 my-md-4"><i class="fas fa-share-alt"></i> Share</div>
+						<div class="card-title my-3 my-md-4"><i class="fas fa-share"></i> Send</div>
 					</div>
 				</div>
 				<div class="col-md-4 comments">
@@ -126,10 +126,10 @@
 						<img src="./img/Grey_full.png" class="card-img" alt="...">
 					</div>
 					<div class="col-12 col-md-3 actions">
-						<div class="card-title  mt-5 mb-4"><i class="fas fa-heart"></i> Like</div>
-						<div class="card-title my-4"><i class="fas fa-comment"></i> Comment</div>
-						<div class="card-title my-4"><i class="fas fa-share-alt"></i> Share</div>
-						<div class="card-title my-4"><i class="fas fa-share"></i> Send</div>
+						<div class="card-title my-3 mt-md-5 mb-md-4"><i class="fas fa-heart"></i> Like</div>
+						<div class="card-title my-3 my-md-4"><i class="fas fa-comment"></i> Comment</div>
+						<div class="card-title my-3 my-md-4"><i class="fas fa-share-alt"></i> Share</div>
+						<div class="card-title my-3 my-md-4"><i class="fas fa-share"></i> Send</div>
 					</div>
 				</div>
 				<div class="col-md-4 comments">
@@ -199,10 +199,10 @@
 						<img src="./img/Grey_full.png" class="card-img" alt="...">
 					</div>
 					<div class="col-12 col-md-3 actions">
-						<div class="card-title  mt-5 mb-4"><i class="fas fa-heart"></i> Like</div>
-						<div class="card-title my-4"><i class="fas fa-comment"></i> Comment</div>
-						<div class="card-title my-4"><i class="fas fa-share-alt"></i> Share</div>
-						<div class="card-title my-4"><i class="fas fa-share"></i> Send</div>
+						<div class="card-title my-3 mt-md-5 mb-md-4"><i class="fas fa-heart"></i> Like</div>
+						<div class="card-title my-3 my-md-4"><i class="fas fa-comment"></i> Comment</div>
+						<div class="card-title my-3 my-md-4"><i class="fas fa-share-alt"></i> Share</div>
+						<div class="card-title my-3 my-md-4"><i class="fas fa-share"></i> Send</div>
 					</div>
 				</div>
 				<div class="col-md-4 comments">
@@ -272,10 +272,10 @@
 						<img src="./img/Grey_full.png" class="card-img" alt="...">
 					</div>
 					<div class="col-12 col-md-3 actions">
-						<div class="card-title  mt-5 mb-4"><i class="fas fa-heart"></i> Like</div>
-						<div class="card-title my-4"><i class="fas fa-comment"></i> Comment</div>
-						<div class="card-title my-4"><i class="fas fa-share-alt"></i> Share</div>
-						<div class="card-title my-4"><i class="fas fa-share"></i> Send</div>
+						<div class="card-title my-3 mt-md-5 mb-md-4"><i class="fas fa-heart"></i> Like</div>
+						<div class="card-title my-3 my-md-4"><i class="fas fa-comment"></i> Comment</div>
+						<div class="card-title my-3 my-md-4"><i class="fas fa-share-alt"></i> Share</div>
+						<div class="card-title my-3 my-md-4"><i class="fas fa-share"></i> Send</div>
 					</div>
 				</div>
 				<div class="col-md-4 comments">
