init profile page
Signed-off-by: VinayakTekade <vinayak.tekade@gmail.com>

--- a/src/messages.html
+++ b/src/messages.html
@@ -27,10 +27,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto">
-                <a class="nav-item nav-link" href="./index.html"><i class="fas fa-home"></i> Home <span
-                        class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link active" href="#"><i class="fas fa-comment"></i> Messages</a>
-                <a class="nav-item nav-link" href="#"><i class="fas fa-user"></i> Profile</a>
+                <a class="nav-item nav-link" href="./index.html"><i class="fas fa-home"></i> Home </a>
+                <a class="nav-item nav-link active" href="#"><i class="fas fa-comment"></i> Messages<span
+                    class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="./profile.html"><i class="fas fa-user"></i> Profile</a>
                 <a class="nav-item nav-link" href="#"><i class="fas fa-cog"></i> Settings</a>
             </div>
         </div>
