init Settings Page
Signed-off-by: VinayakTekade <vinayak.tekade@gmail.com>

--- a/src/profile.html
+++ b/src/profile.html
@@ -31,7 +31,7 @@
                 <a class="nav-item nav-link" href="./messages.html"><i class="fas fa-comment"></i> Messages</a>
                 <a class="nav-item nav-link active" href="#"><i class="fas fa-user"></i> Profile<span
                         class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#"><i class="fas fa-cog"></i> Settings</a>
+                <a class="nav-item nav-link" href="./settings.html"><i class="fas fa-cog"></i> Settings</a>
             </div>
         </div>
     </nav>
