--- a/src/messages.html
+++ b/src/messages.html
@@ -31,7 +31,7 @@
                 <a class="nav-item nav-link active" href="#"><i class="fas fa-comment"></i> Messages<span
                     class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="./profile.html"><i class="fas fa-user"></i> Profile</a>
-                <a class="nav-item nav-link" href="#"><i class="fas fa-cog"></i> Settings</a>
+                <a class="nav-item nav-link" href="./settings.html"><i class="fas fa-cog"></i> Settings</a>
             </div>
         </div>
     </nav>
