Changed to container fluid in home page
Signed-off-by: VinayakTekade <vinayak.tekade@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 		</div>
 	</nav>
 
-	<div class="container">
+	<div class="container-fluid px-5">
 		<div class="card mt-5 mb-3 border-0 social-card">
 			<div class="row align-items-center">
 				<div class="col-3 col-md-1 m-2">
@@ -49,19 +49,17 @@
 			</div>
 			<div class="row interact d-flex">
 				<div class="col-md-8 row">
-					<div class="col-12 col-md-9">
-						<img src="./img/Grey_full.png" class="card-img" alt="...">
+					<div class="post-img col-12 col-md-9">
+						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
 					</div>
 					<div class="col-12 col-md-3 actions">
-						<div class="card-title my-3 mt-md-5 mb-md-4"><i class="fas fa-heart"></i> Like</div>
-						<div class="card-title my-3 my-md-4"><i class="fas fa-comment"></i> Comment</div>
-						<div class="card-title my-3 my-md-4"><i class="fas fa-share-alt"></i> Share</div>
-						<div class="card-title my-3 my-md-4"><i class="fas fa-share"></i> Send</div>
+						<div class="card-title my-3 mt-md-5 mb-md-4 mb-xl-5"><i class="fas fa-heart"></i> Like</div>
+						<div class="card-title my-3 my-md-4 mb-xl-5"><i class="fas fa-comment"></i> Comment</div>
+						<div class="card-title my-3 my-md-4 mb-xl-5"><i class="fas fa-share-alt"></i> Share</div>
+						<div class="card-title my-3 my-md-4 mb-xl-5"><i class="fas fa-share"></i> Send</div>
 					</div>
 				</div>
 				<div class="col-md-4 comments">
-					<div class="row no-gutters">
-						<div class="col-12 col-md-8">
 							<div class="comment mb-2">
 								<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
 							</div>
@@ -105,8 +103,6 @@
 							<div class="comment mb-2">
 								<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
 							</div>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -122,19 +118,17 @@
 			</div>
 			<div class="row interact d-flex">
 				<div class="col-md-8 row">
-					<div class="col-12 col-md-9">
-						<img src="./img/Grey_full.png" class="card-img" alt="...">
+					<div class="post-img col-12 col-md-9">
+						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
 					</div>
 					<div class="col-12 col-md-3 actions">
-						<div class="card-title my-3 mt-md-5 mb-md-4"><i class="fas fa-heart"></i> Like</div>
-						<div class="card-title my-3 my-md-4"><i class="fas fa-comment"></i> Comment</div>
-						<div class="card-title my-3 my-md-4"><i class="fas fa-share-alt"></i> Share</div>
-						<div class="card-title my-3 my-md-4"><i class="fas fa-share"></i> Send</div>
+						<div class="card-title my-3 mt-md-5 mb-md-4 mb-xl-5"><i class="fas fa-heart"></i> Like</div>
+						<div class="card-title my-3 my-md-4 mb-xl-5"><i class="fas fa-comment"></i> Comment</div>
+						<div class="card-title my-3 my-md-4 mb-xl-5"><i class="fas fa-share-alt"></i> Share</div>
+						<div class="card-title my-3 my-md-4 mb-xl-5"><i class="fas fa-share"></i> Send</div>
 					</div>
 				</div>
 				<div class="col-md-4 comments">
-					<div class="row no-gutters">
-						<div class="col-12 col-md-8">
 							<div class="comment mb-2">
 								<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
 							</div>
@@ -178,8 +172,6 @@
 							<div class="comment mb-2">
 								<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
 							</div>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -195,19 +187,17 @@
 			</div>
 			<div class="row interact d-flex">
 				<div class="col-md-8 row">
-					<div class="col-12 col-md-9">
-						<img src="./img/Grey_full.png" class="card-img" alt="...">
+					<div class="post-img col-12 col-md-9">
+						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
 					</div>
 					<div class="col-12 col-md-3 actions">
-						<div class="card-title my-3 mt-md-5 mb-md-4"><i class="fas fa-heart"></i> Like</div>
-						<div class="card-title my-3 my-md-4"><i class="fas fa-comment"></i> Comment</div>
-						<div class="card-title my-3 my-md-4"><i class="fas fa-share-alt"></i> Share</div>
-						<div class="card-title my-3 my-md-4"><i class="fas fa-share"></i> Send</div>
+						<div class="card-title my-3 mt-md-5 mb-md-4 mb-xl-5"><i class="fas fa-heart"></i> Like</div>
+						<div class="card-title my-3 my-md-4 mb-xl-5"><i class="fas fa-comment"></i> Comment</div>
+						<div class="card-title my-3 my-md-4 mb-xl-5"><i class="fas fa-share-alt"></i> Share</div>
+						<div class="card-title my-3 my-md-4 mb-xl-5"><i class="fas fa-share"></i> Send</div>
 					</div>
 				</div>
 				<div class="col-md-4 comments">
-					<div class="row no-gutters">
-						<div class="col-12 col-md-8">
 							<div class="comment mb-2">
 								<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
 							</div>
@@ -251,8 +241,6 @@
 							<div class="comment mb-2">
 								<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
 							</div>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -268,19 +256,17 @@
 			</div>
 			<div class="row interact d-flex">
 				<div class="col-md-8 row">
-					<div class="col-12 col-md-9">
-						<img src="./img/Grey_full.png" class="card-img" alt="...">
+					<div class="post-img col-12 col-md-9">
+						<img src="./img/Grey_full.png" class="card-img rounded" alt="...">
 					</div>
 					<div class="col-12 col-md-3 actions">
-						<div class="card-title my-3 mt-md-5 mb-md-4"><i class="fas fa-heart"></i> Like</div>
-						<div class="card-title my-3 my-md-4"><i class="fas fa-comment"></i> Comment</div>
-						<div class="card-title my-3 my-md-4"><i class="fas fa-share-alt"></i> Share</div>
-						<div class="card-title my-3 my-md-4"><i class="fas fa-share"></i> Send</div>
+						<div class="card-title my-3 mt-md-5 mb-md-4 mb-xl-5"><i class="fas fa-heart"></i> Like</div>
+						<div class="card-title my-3 my-md-4 mb-xl-5"><i class="fas fa-comment"></i> Comment</div>
+						<div class="card-title my-3 my-md-4 mb-xl-5"><i class="fas fa-share-alt"></i> Share</div>
+						<div class="card-title my-3 my-md-4 mb-xl-5"><i class="fas fa-share"></i> Send</div>
 					</div>
 				</div>
 				<div class="col-md-4 comments">
-					<div class="row no-gutters">
-						<div class="col-12 col-md-8">
 							<div class="comment mb-2">
 								<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
 							</div>
@@ -324,8 +310,6 @@
 							<div class="comment mb-2">
 								<p class="card-text"><strong>Helen Baker </strong>Nice Picture</p>
 							</div>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
