--- a/src/profile.html
+++ b/src/profile.html
@@ -36,7 +36,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container-fluid px-5">
         <div class="user my-3">
             <div class="row align-items-center">
                 <div class="col-12 col-md-4 text-center">
