--- a/src/messages.html
+++ b/src/messages.html
@@ -36,7 +36,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container-fluid px-5">
         <div class="row">
             <div class="sidebar col-12 col-md-4">
                 <div class="display-4 mt-4 mb-5">Messages</div>
